don't fix font size to 14px which causes the text to be too small on high DPI screens

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -91,7 +91,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 14px;
     user-select: none;
 }
 
